fix(head): stop chatbot widget overlaping the recaptcha badge

--- a/applications/dxb/head/src/components/styles/FormSection.module.scss
+++ b/applications/dxb/head/src/components/styles/FormSection.module.scss
@@ -6,6 +6,7 @@
   margin-top: 1rem;
   padding: 2rem;
   max-width: 920px;
+  margin-bottom: 1rem;
 
   &--hubSpot {
     background-color: #ffffff;
